--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ button{
 
 section {
     background-color: #a29898;
-    width: 60%;
+    width: 350px;
     border-radius: 15px;
     border: 1px solid black;
 }
